update fix proplem z-index

--- a/app/globals.css
+++ b/app/globals.css
@@ -47,7 +47,7 @@ a {
   color: white;
   border-radius: 24px;
   font-size: 20px;
-  z-index: 12;
+  z-index: 20;
 }
 
 @keyframes aaa {
@@ -94,7 +94,7 @@ a {
   position: relative;
   background-color: rgba(255, 255, 255, 0.329);
   text-align: center;
-  z-index: 101;
+  z-index: 20;
 }
 
 .navigate>a {
@@ -331,6 +331,7 @@ a {
 
 .ranging input[type='range'] {
   -webkit-appearance: none;
+  accent-color: #1CAAA4;
   background-color: aliceblue;
   border-radius: 24px;
   padding: 5px;
@@ -593,7 +594,7 @@ a {
   width: 100%;
   height: 100%;
   transform: translate(-50%, -50%);
-  z-index: 100;
+  z-index: 19;
   background: rgba(220, 220, 220, 0.897);
   /* backdrop-filter: blur(5px); */
   display: flex;
@@ -627,7 +628,7 @@ a {
   flex-direction: column;
   gap: 30px;
   animation: rsr 0.5s ease;
-z-index: 100
+  z-index: 19;
 }
 
 .updateLevel {
